# Axum_super_forms

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  diesel.toml  package-lock.json  package.json  tailwind.config.js
client/: package-lock.json  package.json
client/src/: app.tsx  routes.ts
client/src/pages/: about.data.ts  forms.tsx  home.tsx  login.tsx
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  LoginApp.tsx  index.css
frontend/template/login/: main.tsx
migrations/: 20240909162926_init-postgre-db.down.sql  20240909162926_init-postgre-db.up.sql
sql/: form_registry.sql  setup_admin.sql  setup_forms.sql  setup_user.sql  user_group.sql
src/: admin.rs  auth.rs  client.rs  db.rs  forms.rs  jwt_auth.rs  main.rs  mem_kv.rs  models.rs  router.rs  schema.rs  server.rs
templates/: 404.html  admin.html  adminForm.html  adminLogin.html  admin_nav.html  adminnewform.html  adminstat.html  form.html  formback.html  formpreview.html  home.html  login.html  nav.html  output.css
templates/admin/: admin.html  adminForm.html  adminLogin.html  admin_nav.html  admin_profile.html  adminnewform.html  adminstat.html  form_edit.html  site_config.html
templates/assets/: output.css
templates/user/: home.html  login.html  nav.html  profile.html
