[package]
name = "axum_super_forms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
rust-embed = "8.5.0"
tokio = { version = "1.39.3", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace","cors"] }
bb8 = "0.7.1"
bb8-redis = "0.14.0"
redis = "0.24.0"
jsonwebtoken = "9.3.0"
serde = {version = "1.0.209", features = ["derive"]} 
time = "0.3.36"
argon2 = "0.5.3"
rand = "0.8.5"
axum-util = "0.2.2"
askama_axum = "0.4.0"
askama = "0.12.1"
sqlx = { version = "0.8", features = [ "runtime-tokio" , "postgres"] }
dotenvy = "0.15.7"
redis-macros = "0.4.0"
serde_json = "1.0.128"

# Enable for Debugging only
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
