[package]
name = "axum_super_forms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
rust-embed = "8.5.0"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5", features = ["util","limit"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace","cors","normalize-path","timeout"] }
bb8 = "0.7.1"
bb8-redis = "0.16.0"
redis = {version = "0.24.0", features= ["aio","tokio-comp","ahash"]} 
jsonwebtoken = "9.3.0"
serde = {version = "1.0.209", features = ["derive"]} 
time = "0.3.36"
argon2 = "0.5.3"
rand = "0.8.5"
axum-util = "0.2.2"
askama_axum = "0.4.0"
askama = "0.12.1"
sqlx = { version = "0.8.2", features = [ "runtime-tokio" , "postgres"] }
dotenvy = "0.15.7"
redis-macros = "0.4.1"
serde_json = "1.0.128"
urlencoding = "2.1.3"
axum-extra = { version = "0.9.3", features = ["cookie"] }
indicatif = "0.17.8"
console = "0.15.8"
# Enable for Debugging only
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
